Update trang chu

--- a/index.css
+++ b/index.css
@@ -200,7 +200,7 @@ body {
 }
 
 #top_panel {
-    width: 100%;
+    width: 1503px;
     height: 83px;
     background-color: #ffffff;
     color: #66645c;
@@ -331,7 +331,7 @@ body {
 }
 
 #header1 {
-    width: 100%;
+    width: 1503px;
     height: 620px;
     background-position: 50% 0%;
     color: #66645c;
