--- a/GioHang.css
+++ b/GioHang.css
@@ -357,3 +357,68 @@ float: right;
     color: #000000;
     float: right;
 }
+#buy-amount
+{
+    display: flex;
+}
+#buy-amount button
+{
+    width: 35px;
+    height: 35px;
+    outline: none;
+    background: none;
+    border: 1px solid #ececec;
+    cursor: pointer;
+}
+#buy-amount button:hover
+{
+    background-color: #ececec;
+}
+#buy-amount button svg
+{
+    color: #909090;
+}
+#buy-amount button:hover svg
+{
+    color: #4f4f4f;
+}
+#buy-amount #amount
+{
+    width: 40px;
+    text-align: center;
+    border: 1px solid #ececec;
+}
+#buy-amount1
+{
+    margin-left: 500px;
+    width: 180px;
+    height: 50px;
+    background-color: #FFFFFF;
+    display: flex;
+}
+#buy-amount1 button
+{
+    width: 35px;
+    outline: none;
+    background: none;
+    border: 1px solid #ececec;
+    cursor: pointer;
+}
+#buy-amount1 button:hover
+{
+    background-color: #ececec;
+}
+#buy-amount1 button svg
+{
+    color: #909090;
+}
+#buy-amount1 button:hover svg
+{
+    color: #4f4f4f;
+}
+#buy-amount1 #amount
+{
+    width: 40px;
+    text-align: center;
+    border: 1px solid #ececec;
+}
