--- a/index.css
+++ b/index.css
@@ -560,7 +560,8 @@ nav {
     color: #005580;
     display: inline;
     font-size: 13px;
-    text-align: left
+    text-align: left;
+    
 }
 
 .text_content_best_sale {
