--- a/ThanhToan.css
+++ b/ThanhToan.css
@@ -187,7 +187,7 @@ margin-left: 633px;
 #tygh_content1
 {
     width: 1519px;
-    height: 968px;
+    height: 708px;
     color:#66645c;
 font-size:13px;
 grid-area:auto;
@@ -196,12 +196,13 @@ grid-area:auto;
 #checkout_step
 {
     width: 1150px;
-    height: 952px;
+    height: 680px;
     color:#66645c;
 font-size:13px;
 grid-area:auto;
 margin: 0px auto;
 background-color: #FFFFFF;
+margin-top: 50px;
 }
 #title_cart1
 {
@@ -217,23 +218,65 @@ text-transform:uppercase;
 #box_info_step
 {
     width: 1150px;
-    height: 742px;
+    height: 508px;
     color:#66645c;
 font-size:13px;
 grid-area:auto;
 margin:0px 0px 30px;
-padding:0px 160px;
+padding:0px 0px;
+}
+#box_info_step1
+{
+    width: 575px;
+    height: 400px;
+    color:#66645c;
+font-size:13px;
+grid-area:auto;
+float: left;
+}
+#box_info_step2
+{
+    width: 575px;
+    height: 400px;
+    color:#66645c;
+font-size:13px;
+grid-area:auto;
+float: right;
 }
 #info_dia_chi_giao_hang
 {
     width: 415px;
-    height: 673px;
+    height: 473px;
     color:#66645c;
 font-size:13px;
 grid-area:auto;
 margin: 0px auto;
 }
 #tt_dia_chi
+{
+    width: 394px;
+    height: 44px;
+    color:#117c47;
+font-weight:700;
+grid-area:auto;
+padding:15px 0px 10px;
+text-align:center;
+margin-left: 10px;
+text-transform:uppercase;
+}
+#tt_dia_chi1
+{
+    width: 394px;
+    height: 44px;
+    color:#117c47;
+font-weight:700;
+grid-area:auto;
+padding:15px 0px 10px;
+text-align:center;
+margin-left: 10px;
+text-transform:uppercase;
+}
+#tt_dia_chi3
 {
     width: 394px;
     height: 44px;
@@ -257,7 +300,7 @@ text-align:left;
 .control_group
 {
     width: 394px;
-    height: 28px;
+    height: 50px;
     color:#66645c;
 font-size:13px;
 grid-area:auto;
@@ -280,7 +323,21 @@ text-align:left;
 }
 .control_group input
 {
-    width: 260px;
+    width: 400px;
+    height: 28px;
+    background-color:#ffffff;
+    border: 1px solid;
+    color:#676767;
+    display:inline-block;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:13px;
+    grid-area:auto;
+    margin:0px 3px 0px 0px;
+    padding:4px 3px;
+}
+.control_group select
+{
+    width: 400px;
     height: 28px;
     background-color:#ffffff;
     border-radius:0.25px solid;
@@ -344,7 +401,7 @@ text-align:left;
     flex-direction: row-reverse;
     font-size: 13px;
     justify-content: center;
-    padding: 40px 0px;
+    padding: 0px 0px;
     text-align: left;
 
     margin: 0px auto;
@@ -792,3 +849,18 @@ text-align: left;
 {
     float: left;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
